# vjidi

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.lua  luamidi.c  song.lua  vjidi.c  vjidiin.c
love/: conf.lua  main.lua
